# rustCrudApi

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/database/: mod.rs
