[package]
name = "rustcrud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "0.5.0-rc.2",features = ["json"]}
serde = "1.0.197"
serde_json = "1.0.114"
surrealdb = "1.2.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }